fixed buttons, added spacing, and fixed mobile view

--- a/public/stylesheets/base.scss
+++ b/public/stylesheets/base.scss
@@ -114,9 +114,9 @@ $gray: #444444;
     position: relative;
 
     > .bubbles {
-        // @media screen and (max-width: $break-xs) {
-        //     display: none;
-        // }
+        @media screen and (max-width: $break-xs) {
+            display: none;
+        }
         position: absolute;
         width: 100%;
         // height: 100%;
@@ -458,15 +458,6 @@ $gray: #444444;
     height: 6em;
     bottom: 0;
 
-    .button-row {
-        a {
-            margin-left: 1em;
-            &:hover {
-                margin-left: 0;
-            }
-        }
-    }
-
     p {
         font-weight: 300;
         text-align: center;
@@ -529,15 +520,19 @@ $gray: #444444;
     width: 100%;
     text-align: center;
 
+    a {
+      margin-left: 1em;
+      &:first-child {
+        margin-left:0;
+      }
+    }
+
+
+
     .social-button {
         font-size: 1.4em;
-        margin-left: 1.2em;
         color: tint($gray, 50%);
         transition: all 0.25s;
-
-        &:first-child {
-            margin-left: 0;
-        }
 
         &:hover {
             cursor: pointer;
